<resources>
    <string name="don_t_have_an_account">Don\'t have an accout?</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">login</string>

    <string name="signup">SignUp</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your Email</string>

    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="or">or</string>
    <string name="have_an_account">have an accout?</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read More</string>
    <string name="best_events_you_can_attend">best events you can attend</string>
    <string name="your_feed">Your Feed</string>
    <string name="view_more">view_more</string>
    <string name="log_line">Log Line</string>
    <string name="shop_now">SHOP NOW</string>
    <string name="todo">TODO</string>
    <string name="todays_top_picks">Today\'s top picks</string>
    <string name="top_deals_around">Top deals around</string>
    <string name="home">home</string>
    <string name="product">product</string>
    <string name="services">services</string>
    <string name="events">events</string>
    <string name="search">search</string>
    <string name="cart">cart</string>
    <string name="user_image">user image</string>
</resources>